<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    android:padding="10dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/choose_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="50dp"
                android:layout_marginTop="150dp"
                android:padding="5dp"
                android:text="@string/tap_text"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="24sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/english"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_margin="3dp"
                android:layout_marginBottom="10dp"
                android:background="@color/common_google_signin_btn_text_light_default"
                android:text="@string/btn_en"
                android:textColor="@android:color/background_light"
                android:textSize="18sp" />

            <Button
                android:id="@+id/hindi"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_margin="3dp"
                android:layout_marginBottom="10dp"
                android:background="@color/common_google_signin_btn_text_light_default"
                android:text="@string/btn_hi"
                android:textColor="@android:color/background_light"
                android:textSize="18sp" />

            <Button
                android:id="@+id/kannada"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_margin="3dp"
                android:layout_marginBottom="10dp"
                android:background="@color/common_google_signin_btn_text_light_default"
                android:text="@string/btn_ka"
                android:textColor="@android:color/background_light"
                android:textSize="18sp" />

            <Button
                android:id="@+id/proceed"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="15dp"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="50dp"
                android:background="@drawable/button"
                android:gravity="center"
                android:onClick="Proceed"
                android:text="@string/proceed"
                android:textAlignment="center"
                android:textColor="@android:color/background_light" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>
