<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_frame"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <!-- Login progress -->

    <ProgressBar
        android:id="@+id/login_progress"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_centerInParent="true"
        android:visibility="gone" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:id="@+id/title_buyer"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="20dp"
                android:background="@color/common_google_signin_btn_text_light_default"
                android:gravity="center"
                android:text="@string/title_buyer"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@android:color/background_light"
                android:textSize="24sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="15dp"
                android:contentDescription="TODO"
                android:src="@drawable/siginup" />

            <!-- Login Button -->


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <AutoCompleteTextView
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_weight="1"
                    android:background="@color/common_google_signin_btn_text_light_disabled"
                    android:elevation="1dp"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:paddingStart="10dp"
                    android:textAlignment="center"
                    android:textColor="@android:color/black"
                    android:textColorLink="@color/colorAccent" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_weight="1"
                    android:background="@color/common_google_signin_btn_text_dark_disabled"
                    android:hint="@string/hint_password"
                    android:inputType="textPassword"
                    android:paddingStart="10dp"
                    android:textAlignment="center"
                    android:textColor="@android:color/black"
                    android:textColorLink="@color/colorAccent" />

            </android.support.design.widget.TextInputLayout>

            <CheckBox
                android:id="@+id/remember_me"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="3dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="3dp"
                android:paddingStart="5dp"
                android:text="@string/remember_me"
                android:textColorLink="@color/colorAccent" />


            <Button
                android:id="@+id/btn_login"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="15dp"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/button"
                android:gravity="center"
                android:text="@string/login"
                android:textAlignment="center" />

            <Button
                android:id="@+id/forget_pass"
                android:layout_width="match_parent"
                android:layout_height="26dp"
                android:layout_marginTop="80dp"
                android:background="@null"
                android:onClick="forget_pass"
                android:text="@string/forget_header"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/reg_button"
                android:layout_width="match_parent"
                android:layout_height="26dp"
                android:layout_marginBottom="40dp"
                android:layout_marginTop="10dp"
                android:background="@null"
                android:onClick="reg_activity"
                android:text="@string/log_in_reg"
                android:textAllCaps="false"
                android:textColor="@android:color/black"
                android:textSize="15sp" />

            <!-- Link to Login Screen -->


        </LinearLayout>
    </ScrollView>


</RelativeLayout>
